# toggl-api-wrapper

./: .gitignore  .nvim.lua  .pre-commit-config.yaml  .python-version  404.html  CHANGELOG.html  CONTRIBUTING.html  LICENSE.html  LICENSE.md  README.md  cliff.toml  coverage.xml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: release-drafter.yml
.github/workflows/: documentation.yaml  publish.yaml  release.yaml
about/: CONTRIBUTING.html  LICENSE.html  release-notes.html
api-guide/: cache.html  client.html  config.html  endpoint.html  exceptions.html  index.html  model.html  organization.html  project.html  project_structure.txt  reports.html  tag.html  tracker.html  user.html  utility.html  workspace.html
docs/: CHANGELOG.md  CONTRIBUTING.md  README.md  getting-started.md  release-notes.md
docs/about/: CONTRIBUTING.md  release-notes.md
docs/api-guide/: cache.md  client.md  config.md  endpoint.md  exceptions.md  index.md  model.md  organization.md  project.md  project_structure.txt  reports.md  tag.md  tracker.md  user.md  utility.md  workspace.md
docs/assets/mermaid/: packages.mmd
docs/examples/: asyncio_example.py  logging_example.py  project_example.py  reports_example.py  tracker_example.py
docs/static/mermaid/: classes.mmd  packages.mmd
docs/user-guide/: cache.md  examples.md  installation.md  model.md  project.md  tag.md  tracker.md
scripts/: clean_account.py  create_diagrams.sh  utils.py
scripts/cache/: cache_project.json
search/: search_index.json
src/modules/: client.py  models.py  tracker.py  user.py  workspace.py
src/modules/meta/: __init__.py  cache.py  meta.py
src/toggl_api/: __about__.py  __init__.py  _client.py  _organization.py  _project.py  _tag.py  _tracker.py  _user.py  _workspace.py  config.py  reports.py
src/toggl_api/asyncio/: __init__.py  _async_cache.py  _async_client.py  _async_endpoint.py  _async_organization.py  _async_project.py  _async_reports.py  _async_sqlite_cache.py  _async_tag.py  _async_tracker.py  _async_user.py  _async_workspace.py
src/toggl_api/meta/: __init__.py  _base_endpoint.py  _body.py  _cached_endpoint.py  _enums.py
src/toggl_api/meta/cache/: __init__.py  _base_cache.py  _json_cache.py  _sqlite_cache.py
src/toggl_api/models/: __init__.py  _decorators.py  _models.py  _schema.py
src/toggl_api/utility/: __init__.py  _clean_account.py  _cleanup.py  _generate_fake_data.py
static/mermaid/: cache.mmd  classes.mmd  packages.mmd
tests/: conftest.py  test_cache.py  test_clients.py  test_config.py  test_meta.py  test_models.py  test_organization.py  test_projects.py  test_tags.py  test_trackers.py  test_user.py  test_utility.py  test_workspace.py
tests/extra/test_rc_1/: .togglrc
tests/extra/test_rc_2/: .togglrc
tests/extra/test_rc_3/: .togglrc
tests/test_asyncio/: conftest.py  test_async_clients.py  test_async_module.py  test_async_organization.py  test_async_projects.py  test_async_tags.py  test_async_trackers.py  test_async_workspaces.py
tests/test_asyncio/test_async_cache/: test_async_sqlite.py
tests/test_asyncio/test_async_reports/: test_async_detail.py  test_async_summary.py  test_async_weekly.py
tests/test_meta/: test_cache.py  test_meta.py  test_sqlite.py
tests/test_reports/: conftest.py  test_detail.py  test_summary.py  test_weekly.py
tests/test_trackers/: conftest.py  test_headers.py  test_trackers.py
toggl_api/: __init__.py  _client.py  _exceptions.py  _organization.py  _project.py  _tag.py  _tracker.py  _user.py  _workspace.py  client.py  config.py  organization.py  project.py  reports.py  tag.py  tracker.py  user.py  utility.py  webhooks.py  workspace.py
toggl_api/asyncio/: __init__.py  _async_cache.py  _async_client.py  _async_endpoint.py  _async_organization.py  _async_project.py  _async_reports.py  _async_sqlite_cache.py  _async_tag.py  _async_tracker.py  _async_user.py  _async_workspace.py
toggl_api/meta/: __init__.py  _base_endpoint.py  _cached_endpoint.py  base_endpoint.py  body.py  cached_endpoint.py
toggl_api/meta/cache/: __init__.py  _base_cache.py  _json_cache.py  _sqlite_cache.py  base_cache.py  json_cache.py  sqlite_cache.py
toggl_api/models/: __init__.py  _decorators.py  _models.py  _schema.py  models.py  schema.py
toggl_api/modules/: __init__.py  client.py  models.py  project.py  tag.py  tracker.py  user.py  workspace.py
toggl_api/modules/meta/: __init__.py  base_endpoint.py  body.py  cache.py  cached_endpoint.py  enums.py  meta.py
toggl_api/modules/meta/cache/: __init__.py  base_cache.py  json_cache.py  sqlite_cache.py
toggl_api/modules/models/: __init__.py  models.py  schema.py
toggl_api/modules/reports/: reports.py
toggl_api/reports/: __init__.py  reports.py
user-guide/: examples.html  installation.html
